--- a/config.yaml
+++ b/config.yaml
@@ -38,15 +38,15 @@ params:
     sizes: [400,600]
   hero:
     # Main hero title
-    title: Manage. Deploy.
+    title: Aligner - multilingual content management platform. 
     # Hero subtitle (optional)
-    subtitle: Lorem ipsum sit dolor amet is dummy text used by the typography industry
+    subtitle: Providing an intuitive workflow for you ever growing localisation problems.
     # Button text
     buttontext: Get started
     # Where the main hero button links to
     buttonlink: "#"
     # Hero image (from static/images/___)
-    image: hero-image.jpg
+    image: girlseditor.svg
     # Footer logos (from static/images/logos/clients/___.svg)
     clientlogos:
     - systek
@@ -102,25 +102,25 @@ params:
     list:
     - title: Feature One
       text: Far far away, behind the word mountains, far from the countries
-      image: /images/features1.png
+      image: /images/textedit.svg
       btnText: 
       btnURL: ""
       btnKlass: "" 
     - title: Feature Two
       text: Separated they live in Bookmarksgrove right at the coast
-      image: /images/features2.png
+      image: /images/roboto-logo.svg
       btnText: Call to Action
       btnURL: ""
       btnKlass: ""
     - title: Feature Three
       text: A small river named Duden flows by their place and supplies it
-      image: /images/features3.png
+      image: /images/team.svg
       btnText: 
       btnURL: ""
       btnKlass: ""
     - title: Feature Four
       text: Duden flows by their place far far away, behind the word mountains.
-      image: /images/features4.png
+      image: /images/reload.svg
       btnText: 
       btnURL: ""
       btnKlass: ""
@@ -129,27 +129,27 @@ params:
     title: Froala Design Blocks
     subtitle: Over 170 responsive design blocks ready to be used in your web or mobile apps. 
     features:
-    - title: Froala Blocks
+    - title: Seamless multilingual content syncronization via changes matrix
       text: A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
-      image: /images/14.png
+      image: /images/ai-illustration.svg
       btnText: Call to Action
       btnURL: "#"
       btnKlass: "secondary-btn" 
-    - title: Froala Design Blocks
+    - title: Handle your content with your team or fall back onto professional hired help through Aligner
       text: Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
-      image: /images/19.png
+      image: /images/team-image.svg
       btnText: Call to Action
       btnURL: "#"
       btnKlass: "primary-btn"
-    - title: Design Blocks
+    - title: Multiple content translation options for a variety of budgets
       text: Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-      image: /images/2.png
+      image: /images/flags-illustration.svg
       btnText: Call to Action
       btnURL: "#"
       btnKlass: "secondary-btn"
-    - title: Design Blocks
+    - title: A constantly expanding platform for a multitude of different types of content across all fields
       text: Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-      image: /images/chatting.png
+      image: /images/version-control.svg
       btnText: Download
       btnURL: "#"
       btnKlass: "accent-btn"
@@ -160,7 +160,7 @@ params:
     plans:
     - title: Startup
       price: 9.90
-      icon: /images/small.jpg
+      icon: /images/plane.svg
       heighlight: For small companies
       btnText: Choose Plan
       btnURL: "#"
@@ -171,7 +171,7 @@ params:
         - text: Subdomain
     - title: Standard
       price: 19.90
-      icon: /images/mid.jpg
+      icon: /images/hot-air-balloon.svg
       heighlight: For medium companies
       btnText: Choose Plan
       btnURL: "#"
@@ -182,7 +182,7 @@ params:
         - text: Subdomain
     - title: Business
       price: 29.90
-      icon: /images/large.jpg
+      icon: /images/sun.svg
       heighlight: For large companies
       btnText: Choose Plan
       btnURL: "#"
