--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: 
 languageCode: en-us
-title: Hugo Fresh Theme
+title: Aligner
 theme: hugo-fresh
 googleAnalytics: # Put in your tracking code without quotes like this: UA-XXXXXX...
 # Disables warnings
@@ -31,24 +31,24 @@ params:
   description: 
   navbarlogo:
   # Logo (from static/images/logos/___)
-    image: logos/fresh.svg
+    image: logos/aligner-logo.svg
     link: /
   font:
     name: "Libre Franklin"
     sizes: [400,600]
   hero:
     # Main hero title
-    title: Aligner - multilingual content management platform. 
+    title: World's 1st multilingual content management platform
     # Hero subtitle (optional)
     subtitle: Providing an intuitive workflow for you ever growing localisation problems.
     # Button text
-    buttontext: Get started
+    buttontext: Start free now →
     # Where the main hero button links to
-    buttonlink: "#" 
+    buttonlink: https://app.aligner.io
     # Button text
     buttontext2: Book a demo
     # Where the main hero button links to
-    buttonlink2: "#" 
+    buttonlink2: https://calendly.com/aligner/15min 
     # Hero image (from static/images/___)
     image: girlseditor.svg
     # Footer logos (from static/images/logos/clients/___.svg)
@@ -66,18 +66,18 @@ params:
     url: /#pricing
   - title: Solutions
     sublinks:
-    - title: Dropdown item
-      url: /
-    - title: Dropdown item
-      url: /
-    - title: Dropdown item
-      url: /
+    - title: POOL - croudsourced API 
+      url: https://pool.aligner.io
+    - title: GO - content delivery
+      url: https://go.aligner.io
+    - title: APP - conent management
+      url: https://app.aligner.io
   - title: Resources
     url: /resources
   - title: Login
     url: /login    
-  - title: Sign up
-    url: /
+  - title: Start free now →
+    url: https://app.aligner.io
     button: true
   section1:
     enable: false
@@ -103,61 +103,61 @@ params:
     enable: true
     title: Features 
     subtitle:  
-    buttonlink: "/features"
-    buttonText: Learn More About Features
+    buttonlink: https://app.aligner.io
+    buttonText: Get started here →
     list:
-    - title: Feature One
-      text: Far far away, behind the word mountains, far from the countries
+    - title: Matrix editor
+      text: No hassle with keeping up with track changes in all languages.
       image: /images/textedit.svg
       btnText: 
       btnURL: ""
       btnKlass: "" 
-    - title: Feature Two
-      text: Separated they live in Bookmarksgrove right at the coast
+    - title: Machine translation
+      text: Use extensively machine translation selectively on in whole piece.
       image: /images/roboto-logo.svg
       btnText: Call to Action
       btnURL: ""
       btnKlass: ""
-    - title: Feature Three
-      text: A small river named Duden flows by their place and supplies it
+    - title: Assign languages
+      text: Work with teams and let internal or external collaborators in.
       image: /images/team.svg
       btnText: 
       btnURL: ""
       btnKlass: ""
-    - title: Feature Four
-      text: Duden flows by their place far far away, behind the word mountains.
+    - title: Export to destination
+      text: Publish your conent to your web, document or other resource.
       image: /images/reload.svg
       btnText: 
       btnURL: ""
       btnKlass: ""
   froalaDesign:
     enable: true
-    title: Froala Design Blocks
-    subtitle: Over 170 responsive design blocks ready to be used in your web or mobile apps. 
+    title: Aligner
+    subtitle: Made for marketers and content creators to work on multilingual content with ease.
     features:
     - title: Seamless multilingual content syncronization via changes matrix
-      text: A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+      text: No back and forth emails and files. Get syncrhonised all languages automatically when updating pieces of the content.
       image: /images/ai-illustration.svg
-      btnText: Call to Action
-      btnURL: "#"
+      btnText: See it in action →
+      btnURL: https://app.aligner.io
       btnKlass: "secondary-btn" 
-    - title: Handle your content with your team or fall back onto professional hired help through Aligner
-      text: Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+    - title: Create your content with your team
+      text: Assign languages, invite collaborators and never stay alert on missing work done.
       image: /images/team-image.svg
-      btnText: Call to Action
-      btnURL: "#"
+      btnText: Start working and invite people →
+      btnURL: https://app.aligner.io
       btnKlass: "primary-btn"
-    - title: Multiple content translation options for a variety of budgets
-      text: Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+    - title: Keep you multilingual paperwork in one place
+      text: Get things syncrhonised with Google Docs and other services without leaving your favourite apps.
       image: /images/flags-illustration.svg
-      btnText: Call to Action
-      btnURL: "#"
+      btnText: Syncronise Google Docs →
+      btnURL: https://app.aligner.io
       btnKlass: "secondary-btn"
-    - title: A constantly expanding platform for a multitude of different types of content across all fields
-      text: Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+    - title: Keep track of changes and never miss any change
+      text: Aligner keeps track of changes done in multiple languages and provides selective machine translation to fix it rightaway
       image: /images/version-control.svg
-      btnText: Download
-      btnURL: "#"
+      btnText: See how it works →
+      btnURL: https://app.aligner.io
       btnKlass: "accent-btn"
   pricing:
     enable: true
@@ -166,55 +166,51 @@ params:
     buttonlink: "/pricing"
     buttonText: learn more about pricing
     plans:
-    - title: Startup
-      price: 9.90
+    - title: Personal
+      price: $9
       icon: /images/plane.svg
-      heighlight: For small companies
-      btnText: Choose Plan
+      heighlight: Get things done yourself
+      btnText: Learn more
       btnURL: "#"
       btnKlass: "secondary-btn"
       features:
-        - text: 10 hours of support
-        - text: 40MB of storage
-        - text: Subdomain
-    - title: Standard
-      price: 19.90
+        - text: Matrix editor
+        - text: Headings, Numbers, Bullets
+        - text: Public links
+        - text: Machine translation
+    - title: Freemium
+      price: FREE
       icon: /images/hot-air-balloon.svg
-      heighlight: For medium companies
-      btnText: Choose Plan
+      heighlight: Premium basics
+      btnText: Start now
       btnURL: "#"
       btnKlass: "primary-btn"
       features:
-        - text: 10 hours of support
-        - text: 40MB of storage
-        - text: Subdomain
-    - title: Business
-      price: 29.90
+        - text: Matrix editor
+        - text: Styles and track changes
+        - text: 
+    - title: Team
+      price: $29.90
       icon: /images/sun.svg
       heighlight: For large companies
-      btnText: Choose Plan
-      btnURL: "#"
+      btnText: Learn more
+      btnURL: "/pricing"
       btnKlass: "secondary-btn"
       features:
-        - text: 10 hours of support
+        - text: up to 5 people 
         - text: 40MB of storage
         - text: Subdomain
   CTA:
     enable: true
-    title: Call to Action
+    title: Get out from the manual routine
     subtitle: Fortune 100 companies are using our products
     text: Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts
-    btnText: Download
-    btnURL: "#"
+    btnText: Book a time with us
+    btnURL: https://calendly.com/aligner/15min
     btnKlass: "accent-btn"
-    clientlogos:
-    - systek
-    - tribe
-    - kromo
-    - infinite
-    - gutwork
+    clientlogos: 
   testimonials:
-    enable: true
+    enable: false
     title: Testimonials
     subtitle: 
     text: Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
@@ -222,20 +218,20 @@ params:
     image: /images/illustrations/faces/2.png
   pricingInner:
     enable: true
-    title: Pricing Plans
+    title: Pricing built for individuals and teams
     subtitle:  
     buttonlink: "/pricing"
     buttonText: learn more about pricing
     plans:
-    - title: Hobby
-      price: $99
+    - title: Personal
+      price: $9
       icon: /images/plane.svg
       heighlight: For small companies
-      btnText: Buy Now
+      btnText: Coming soon →
       btnURL: "#"
       btnKlass: "secondary-btn"
-    - title: Professional
-      price: $399
+    - title: Team
+      price: $24
       icon: /images/hot-air-balloon.svg
       heighlight: For medium companies
       btnText: Buy Now
@@ -257,47 +253,59 @@ params:
       btnKlass: "secondary-btn"      
     features:
       - list: 
-        - Support
-        - 3 months
-        - 6 months
-        - 12 months
-        - Custom
-      - list: 
-        - Full source code
+        - Matrix editor
         - true
         - true
         - true
         - true
       - list: 
-        - SaaS / Subscription
+        - Languages
+        - 3
+        - 5
+        - 10
+        - contact
+      - list: 
+        - Syncrhonised styles
         - true
         - true
         - true
         - true
       - list: 
-        - Intranet
-        - 
-        - true
-        - true
-        - true
-      - list: 
-        - Downloadable Software
-        - 
-        - 
+        - Import
+        - manual
+        - docx and Google docs
         - true
         - true
       - list: 
-        - Redistribute
+        - Export
+        - manual
+        - .docx or Google Docs, PDF
+        - 
+        - "-"
+      - list: 
+        - Sharing
         - 
         - 
         - 
         - true
       - list: 
-        - Custom code
+        - Publishing
+        - public links
+        - public and private links
         - 
         - 
-        - 
+      - list: 
+        - Worklows
+        - '-'
         - true
+        - true
+        - 
+      - list: 
+        - Rights
+        - '-'
+        - true
+        - true
+        - 
   featuresList:
     enable: false
     title: Features
@@ -384,55 +392,39 @@ params:
   section5: false
   footer:
     # Logo (from /images/logos/___)
-    logo: fresh-white-alt.svg
+    logo: aligner-logo.svg
     # Social Media Title
     socialmediatitle: Follow Us
     # Social media links (GitHub, Twitter, etc.). All are optional.
     socialmedia:
     - link: https://github.com/lucperkins/github-fresh
       # Icons are from Font Awesome
-      icon: github
-    - link: https://dribbble.com/#
-      icon: dribbble
-    - link: https://facebook.com/#
+    - link: https://www.facebook.com/align.and.scale/
       icon: facebook
-    - link: https://twitter.com/lucperkins
-      icon: twitter
-    - link: https://bitbucket.org/#
-      icon: bitbucket
-    bulmalogo: true
+    bulmalogo: false
     quicklinks:
-      column1:
-        title: "Product"
-        links:
-        - text: Discover features
-          link: /
-        - text: Why choose our product?
-          link: /
-        - text: Compare features
-          link: /
-        - text: Our roadmap
-          link: /
-        - text: AGB
-          link: /agb
-      column2:
-        title: "Docs"
-        links:
-        - text: Get started
-          link: /
-        - text: User guides
-          link: /
-        - text: Admin guide
-          link: /
-        - text: Developers
-          link: /
-      column3:
-        title: "Blog"
-        links:
-        - text: Latest news
-          link: /blog/first
-        - text: Tech articles
-          link: /blog/second
+  #    column1:
+ #       title: "Product"
+ #       links:
+
+#      column2:
+ #       title: "Pricing"
+  #      links:
+   #     - text: Get started
+    #      link: /
+     #   - text: User guides
+      #    link: /
+       # - text: Admin guide
+          #link: /
+        #- text: Developers
+         # link: /
+      #column3:
+     #   title: "Resources"
+    #    links:
+    #    - text: Latest news
+     #     link: /blog/first
+      #  - text: Tech articles
+       #   link: /blog/second
 
 
           
