--- a/themes/hugo-fresh/exampleSite/config.yaml
+++ b/themes/hugo-fresh/exampleSite/config.yaml
@@ -119,7 +119,7 @@ params:
   section5: true
   footer:
     # Logo (from /images/logos/___)
-    logo: fresh-white-alt.svg
+    logo: logo-new.svg
     # Social Media Title
     socialmediatitle: Follow Us
     # Social media links (GitHub, Twitter, etc.). All are optional.
