--- a/config.yaml
+++ b/config.yaml
@@ -169,7 +169,7 @@ params:
     - title: Premium
       price: $9 / mo
       icon: /images/plane.svg
-      heighlight: Get things done yourself
+      heighlight: Get things done yourself fast
       btnText: Learn more
       btnURL: /pricing
       btnKlass: "btn-aligner rounded"
@@ -181,19 +181,19 @@ params:
     - title: Freemium
       price: FREE
       icon: /images/hot-air-balloon.svg
-      heighlight: Premium basics
+      heighlight: Basics that will amaze you
       btnText: Start now
       btnURL: https://app.aligner.io
       btnKlass: "btn-aligner rounded"
       features:
-        - text: Matrix editor
-        - text: Styles and track changes
-        - text: 10,000 characters of MT
-        - text: 
+        - text: Matrix editor and MT translation
+        - text: sharing
+        - text: .docx and Google Docs integration
+        - text: export
     - title: Team
       price: $29.90 / mo
       icon: /images/sun.svg
-      heighlight: For large companies
+      heighlight: Extra team functionality
       btnText: Learn more
       btnURL: "/pricing"
       btnKlass: "btn-aligner rounded"
