--- a/config.yaml
+++ b/config.yaml
@@ -188,7 +188,7 @@ params:
       features:
         - text: Matrix editor and MT translation
         - text: sharing
-        - text: .docx and Google Docs integration
+        - text: true
         - text: export
     - title: Team
       price: $29.90 / mo
@@ -275,8 +275,8 @@ params:
         - true
       - list: 
         - Machine Translation
-        - manual
-        - docx and Google docs
+        - true
+        - true
         - true
       - list:
         - Choose MT engines
@@ -287,12 +287,12 @@ params:
         - Import
         - manual
         - docx and Google docs
-        - true
+        - extended functionality
       - list: 
         - Export
-        - manual
         - .docx or Google Docs, PDF
-        - 
+        - .docx or Google Docs, PDF
+        - extended functionality
       - list: 
         - Sharing
         - true
@@ -302,7 +302,7 @@ params:
         - Publishing
         - public links
         - public and private links
-        - 
+        - public and private links
       - list: 
         - Worklows
         - '-'
