--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: 
 languageCode: en-us
-title: Aligner- Multilingual content management
+title: Aligner| Multilingual content management| Online free platform.
 theme: hugo-fresh
 googleAnalytics: UA-138300699-1
 # Disables warnings
@@ -25,8 +25,8 @@ params:
   # Open graph allows easy social sharing. If you don't want it you can set it to false or just delete the variable
   openGraph: true
   # Used as meta data; describe your site to make Google Bots happy 
-  description: 
-  navbarlogo: 
+  description: Multilingual content management platform.
+  navbarlogo: logos/logo-new.svg
   # Logo (from static/images/logos/___)
     image: logos/logo-new.svg
     link: /
