--- a/config.yaml
+++ b/config.yaml
@@ -26,7 +26,7 @@ params:
   openGraph: true
   # Used as meta data; describe your site to make Google Bots happy 
   description: Multilingual content management platform.
-  navbarlogo: logos/logo-new.svg
+  navbarlogo: 
   # Logo (from static/images/logos/___)
     image: logos/logo-new.svg
     link: /
