--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: 
 languageCode: en-us
-title: Aligner| Multilingual content management| Online free platform.
+title: Aligner | Multilingual content management | Online free platform.
 theme: hugo-fresh
 googleAnalytics: UA-138300699-1
 # Disables warnings
@@ -25,7 +25,7 @@ params:
   # Open graph allows easy social sharing. If you don't want it you can set it to false or just delete the variable
   openGraph: true
   # Used as meta data; describe your site to make Google Bots happy 
-  description: Multilingual content management platform.
+  description: Localisation for blogs, knwoledgebases and web content.
   navbarlogo: 
   # Logo (from static/images/logos/___)
     image: logos/logo-new.svg
